--- a/src/semantic/src/themes/default/custom/views/createAnnouncement.less
+++ b/src/semantic/src/themes/default/custom/views/createAnnouncement.less
@@ -43,7 +43,11 @@
 }
 
 .ui.modal .dropdown-margin-left .ui.dropdown>.text {
-  margin-left: -1em !important;
+  color: #cdcccc;;
+}
+
+.ui.dropdown:not(.button)>.default.text {
+    color: #cdcccc;
 }
 
 .dropdown-margin-left {
